Readme updated; Docs updated; Init transaction Test added
